compiler/tools/fpp-to-dict/test/top/arrayFwEventIdType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/arrayFwEventIdType.fpp:4.1
array FwEventIdType = [3] F32
^
error: the F Prime framework type FwEventIdType must be an alias type
